# lora-from-scratch

./: .gitignore  README.md  data.py  model.py  pyproject.toml  test_data.py  test_gradients.py  test_lora.py  test_model_correctness.py  test_optimizer.py  train.py
.github/workflows/: ci.yml
