[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lora-from-scratch"
version = "0.1.0"
description = "LoRA implemented from scratch on a hand-derived, single-block transformer -- no autodiff library, no PyTorch."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["black", "ruff"]

[tool.setuptools]
py-modules = ["model", "data"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
